_kubernetes/aws/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=development
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTP":443}]'

  name: ${APP_NAME}-ingress
  namespace: ${NAMESPACE}
  labels:
    name: ${APP_NAME}
spec:
  rules:
    - host: ${INGRESS_HOSTNAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${APP_NAME}-srv
                port:
                  number: ${PORT}
